# monte_carlo_retirement

./: .gitignore  README.md  config.json  config.py  constants.py  main.py  monte_carlo_retirement.py  plotting.py  pyproject.toml  server.py  simulation.py  utils.py
backend/: config.py  plotting.py  server.py  simulation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ConfigEditor.jsx  HistogramChart.jsx  SimulationProgress.jsx  SummaryCard.jsx  TrajectoryChart.jsx
